--- a/alc.ipynb
+++ b/alc.ipynb
@@ -371,8 +371,8 @@
       "Dep. Variable:                 rating   R-squared:                       0.090\n",
       "Model:                            OLS   Adj. R-squared:                  0.090\n",
       "Method:                 Least Squares   F-statistic:                 2.629e+05\n",
-      "Date:                Thu, 14 Dec 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        14:04:41   Log-Likelihood:            -2.3306e+06\n",
+      "Date:                Tue, 19 Dec 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        09:48:27   Log-Likelihood:            -2.3306e+06\n",
       "No. Observations:             2647205   AIC:                         4.661e+06\n",
       "Df Residuals:                 2647203   BIC:                         4.661e+06\n",
       "Df Model:                           1                                         \n",
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2119,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2380,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2575,6 +2575,283 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)  # Add a grid for better visualization\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## --------- future analysis ---------- ##\n",
+    "\n",
+    "choisir la bière préféré par mois --> éxtraire son pourcentage\n",
+    "\n",
+    "\n",
+    "choisir le style préféré par mois --> éxtraire son pourcentage\n",
+    "\n",
+    "\n",
+    "est-ce que il y a un pourcentage characteristique par bière\n",
+    "\n",
+    "--> how do we find the best abv: comparing best rating or most bought--> assure that high abv don't falsify the final abv score (don't calculate a mean abv but choose the one that has the best rating) but watch out because some that just get very few ratings might be biased, especially high abvs. wilson lower bound should assure this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "import pandas as pd\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
+    "\n",
+    "def anova_tukey_analysis(df):\n",
+    "    # Perform ANOVA test\n",
+    "    anova_result = stats.f_oneway(*(df[df['style'] == s]['abv'] for s in df['style'].unique()))\n",
+    "\n",
+    "    # Store results\n",
+    "    results = {'ANOVA': {'F-value': anova_result.statistic, 'p-value': anova_result.pvalue}}\n",
+    "\n",
+    "    # Perform Tukey's HSD test if ANOVA is significant\n",
+    "    if anova_result.pvalue < 0.05:\n",
+    "        tukey_result = pairwise_tukeyhsd(endog=df['abv'], groups=df['style'], alpha=0.05)\n",
+    "        results['TukeyHSD'] = tukey_result.summary().as_text()\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Example usage:\n",
+    "# results = anova_tukey_analysis(your_dataframe)\n",
+    "# print(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "import pandas as pd\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
+    "\n",
+    "def anova_tukey_analysis_with_checks(df):\n",
+    "    # Preliminary data checks\n",
+    "    if df['abv'].isna().any():\n",
+    "        return \"Error: Missing ABV values\"\n",
+    "    if not pd.api.types.is_numeric_dtype(df['abv']):\n",
+    "        return \"Error: ABV values are not numeric\"\n",
+    "    if df.groupby('style')['abv'].apply(lambda x: len(x.unique()) == 1).any():\n",
+    "        return \"Error: One or more beer styles have constant ABV values\"\n",
+    "\n",
+    "    # Perform ANOVA test\n",
+    "    anova_result = stats.f_oneway(*(df[df['style'] == s]['abv'] for s in df['style'].unique()))\n",
+    "\n",
+    "    # Store results\n",
+    "    results = {'ANOVA': {'F-value': anova_result.statistic, 'p-value': anova_result.pvalue}}\n",
+    "\n",
+    "    # Perform Tukey's HSD test if ANOVA is significant\n",
+    "    if anova_result.pvalue < 0.05:\n",
+    "        tukey_result = pairwise_tukeyhsd(endog=df['abv'], groups=df['style'], alpha=0.05)\n",
+    "        results['TukeyHSD'] = tukey_result.summary().as_text()\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Example usage:\n",
+    "# results = anova_tukey_analysis_with_checks(your_dataframe)\n",
+    "# print(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Error: Missing ABV values'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anova_tukey_analysis_with_checks(ratings_combined_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyze_beer_style_abv(df, beers_csv_path=None):\n",
+    "    # Check if 'abv' is in df, if not try to load it from beers.csv\n",
+    "    if 'abv' not in df.columns:\n",
+    "        if beers_csv_path is None:\n",
+    "            raise ValueError(\"ABV data is missing and no path to 'beers.csv' provided.\")\n",
+    "        beers_df = pd.read_csv(beers_csv_path)\n",
+    "        df = pd.merge(df, beers_df[['beer_id', 'abv']], on='beer_id', how='left')\n",
+    "\n",
+    "    # Group by beer style and calculate the mean ABV for each style\n",
+    "    beer_style_abv_df = df.groupby('style')['abv'].mean().reset_index()\n",
+    "    beer_style_abv_df.columns = ['style', 'typical_abv']\n",
+    "    return beer_style_abv_df\n",
+    "\n",
+    "# Example usage\n",
+    "# beer_style_abv_df = analyze_beer_style_abv(your_dataframe, 'path/to/beers.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>style</th>\n",
+       "      <th>typical_abv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abbey Dubbel</td>\n",
+       "      <td>6.360525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Abbey Tripel</td>\n",
+       "      <td>6.446646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abt/Quadrupel</td>\n",
+       "      <td>6.305580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Altbier</td>\n",
+       "      <td>5.871322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amber Ale</td>\n",
+       "      <td>6.077977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>Wheat Ale</td>\n",
+       "      <td>6.647419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>Wheatwine</td>\n",
+       "      <td>10.885869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>Winter Warmer</td>\n",
+       "      <td>6.781773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>Witbier</td>\n",
+       "      <td>5.808262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Zwickel/Keller/Landbier</td>\n",
+       "      <td>6.172008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       style  typical_abv\n",
+       "0               Abbey Dubbel     6.360525\n",
+       "1               Abbey Tripel     6.446646\n",
+       "2              Abt/Quadrupel     6.305580\n",
+       "3                    Altbier     5.871322\n",
+       "4                  Amber Ale     6.077977\n",
+       "..                       ...          ...\n",
+       "174                Wheat Ale     6.647419\n",
+       "175                Wheatwine    10.885869\n",
+       "176            Winter Warmer     6.781773\n",
+       "177                  Witbier     5.808262\n",
+       "178  Zwickel/Keller/Landbier     6.172008\n",
+       "\n",
+       "[179 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analyze_beer_style_abv(ratings_combined_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### in find_keywords_per month (good keywords)\n",
+    "\n",
+    "### always create new dataframe to avoid creating problems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### groupby abv number of ratings et le average --> quel est le mieux noté --> see nb\n",
+    "\n",
+    "## truc interactif avec plotly\n",
+    "\n",
+    "# observational study, comparer que cette bière a toutes les autres !\n",
+    "\n",
+    "# change wilson lower bound à autre, clean\n",
+    "\n",
+    "## bin par deux (notebook du HW1) beer_alcohol_by_dana --> vers le bas\n",
+    "\n",
+    "### analyse pour trouver abv par type de bière et analyse de significance\n",
+    "\n",
+    "#### montrer que ca a un impact sur le rating -.- analyse par mois et quantifier avec test stat pour justifier\n",
+    "\n",
+    "###### conclusion et remarque, test utilisé à chaque étappe (assumptions, hypothèse, conclusions)"
    ]
   }
  ],
