--- a/eda2ALEX_location.ipynb
+++ b/eda2ALEX_location.ipynb
@@ -17476,7 +17476,347 @@
    "cell_type": "code",
    "execution_count": 313,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>style</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>new_id_beer</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>brewery_location</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>good_review</th>\n",
+       "      <th>US_location</th>\n",
+       "      <th>abv_bin</th>\n",
+       "      <th>strata</th>\n",
+       "      <th>propensity_score</th>\n",
+       "      <th>propensity_score_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Alexander Keith's Galaxy Hop Ale</td>\n",
+       "      <td>Alexander Keith's</td>\n",
+       "      <td>American IPA</td>\n",
+       "      <td>0.447500</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>11</td>\n",
+       "      <td>ff6db925907bf2b1fb3cc2efacf27a95748bb5eec6807c...</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>BeerAdvocate</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(4, 6]</td>\n",
+       "      <td>American IPA_(4, 6]_11_BeerAdvocate</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732</th>\n",
+       "      <td>Cascade Pale Ale</td>\n",
+       "      <td>Saltaire Brewery Limited</td>\n",
+       "      <td>American Pale Ale (APA)</td>\n",
+       "      <td>0.742500</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>12</td>\n",
+       "      <td>93a4fdbd983616895a6b07549c3b0994d67a345626b715...</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>England</td>\n",
+       "      <td>BeerAdvocate</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(4, 6]</td>\n",
+       "      <td>American Pale Ale (APA)_(4, 6]_12_BeerAdvocate</td>\n",
+       "      <td>0.961538</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>981</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Bristol Beer Factory</td>\n",
+       "      <td>English Bitter</td>\n",
+       "      <td>0.670000</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>8</td>\n",
+       "      <td>32786cb3eaa4df524664069f14660c7cb779e862876a48...</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>England</td>\n",
+       "      <td>BeerAdvocate</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(2, 4]</td>\n",
+       "      <td>English Bitter_(2, 4]_8_BeerAdvocate</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>Mars Magic Premium Ale</td>\n",
+       "      <td>Wold Top Brewery</td>\n",
+       "      <td>Extra Special / Strong Bitter (ESB)</td>\n",
+       "      <td>0.695000</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>f37156466222335aa4eae4f536dd70f0f50df80ef979d9...</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>England</td>\n",
+       "      <td>BeerAdvocate</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(4, 6]</td>\n",
+       "      <td>Extra Special / Strong Bitter (ESB)_(4, 6]_12_...</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1916</th>\n",
+       "      <td>Lazy Sunday</td>\n",
+       "      <td>Trouble Brewing</td>\n",
+       "      <td>Saison / Farmhouse Ale</td>\n",
+       "      <td>0.647500</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>8</td>\n",
+       "      <td>88e5683bea6b23c4f6bb42dc495dcbd75dda36b7a18d21...</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>BeerAdvocate</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(6, 8]</td>\n",
+       "      <td>Saison / Farmhouse Ale_(6, 8]_8_BeerAdvocate</td>\n",
+       "      <td>0.863636</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5454172</th>\n",
+       "      <td>Siren / Evil Twin The Flying Dutchman</td>\n",
+       "      <td>Siren</td>\n",
+       "      <td>American Pale Ale</td>\n",
+       "      <td>0.733333</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7e3ae742f42b78dbd6d9a89366911ee620fb7ad37f338c...</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>England</td>\n",
+       "      <td>RateBeer</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(4, 6]</td>\n",
+       "      <td>American Pale Ale_(4, 6]_3_RateBeer</td>\n",
+       "      <td>0.885714</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5454185</th>\n",
+       "      <td>Wychwood Hobgoblin (Pasteurised)</td>\n",
+       "      <td>Wychwood &amp;#40;Marstons&amp;#41;</td>\n",
+       "      <td>Premium Bitter/ESB</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>7</td>\n",
+       "      <td>eb1f2a5b2802e8c766f91ad40bf6a6cf194c4ae9fc7f41...</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>England</td>\n",
+       "      <td>RateBeer</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(4, 6]</td>\n",
+       "      <td>Premium Bitter/ESB_(4, 6]_7_RateBeer</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5454544</th>\n",
+       "      <td>Blaugies La Moneuse</td>\n",
+       "      <td>Brasserie de Blaugies</td>\n",
+       "      <td>Saison</td>\n",
+       "      <td>0.622222</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>3</td>\n",
+       "      <td>331cbf29f21a93327dce692b4b895b1bf481b6db69b3af...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>RateBeer</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(6, 8]</td>\n",
+       "      <td>Saison_(6, 8]_3_RateBeer</td>\n",
+       "      <td>0.761905</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5454618</th>\n",
+       "      <td>Duvel</td>\n",
+       "      <td>Duvel Moortgat</td>\n",
+       "      <td>Belgian Strong Ale</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>4</td>\n",
+       "      <td>cb42daaa490aa9ba4ce7d70226b869af136b00e32128ba...</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>RateBeer</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(8, 10]</td>\n",
+       "      <td>Belgian Strong Ale_(8, 10]_4_RateBeer</td>\n",
+       "      <td>0.346154</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5455033</th>\n",
+       "      <td>Rodenbach</td>\n",
+       "      <td>Brouwerij Rodenbach (Palm)</td>\n",
+       "      <td>Sour Red/Brown</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>712a1825ba05da3376e15cb453ae4501a4d1990276c134...</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>RateBeer</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>(4, 6]</td>\n",
+       "      <td>Sour Red/Brown_(4, 6]_2_RateBeer</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8836 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     beer_name                  brewery_name  \\\n",
+       "11            Alexander Keith's Galaxy Hop Ale             Alexander Keith's   \n",
+       "732                           Cascade Pale Ale      Saltaire Brewery Limited   \n",
+       "981                                       Acer          Bristol Beer Factory   \n",
+       "999                     Mars Magic Premium Ale              Wold Top Brewery   \n",
+       "1916                               Lazy Sunday               Trouble Brewing   \n",
+       "...                                        ...                           ...   \n",
+       "5454172  Siren / Evil Twin The Flying Dutchman                         Siren   \n",
+       "5454185       Wychwood Hobgoblin (Pasteurised)  Wychwood &#40;Marstons&#41;   \n",
+       "5454544                    Blaugies La Moneuse         Brasserie de Blaugies   \n",
+       "5454618                                  Duvel                Duvel Moortgat   \n",
+       "5455033                              Rodenbach    Brouwerij Rodenbach (Palm)   \n",
+       "\n",
+       "                                       style    rating  year  month  \\\n",
+       "11                              American IPA  0.447500  2014     11   \n",
+       "732                  American Pale Ale (APA)  0.742500  2012     12   \n",
+       "981                           English Bitter  0.670000  2011      8   \n",
+       "999      Extra Special / Strong Bitter (ESB)  0.695000  2011     12   \n",
+       "1916                  Saison / Farmhouse Ale  0.647500  2014      8   \n",
+       "...                                      ...       ...   ...    ...   \n",
+       "5454172                    American Pale Ale  0.733333  2014      3   \n",
+       "5454185                   Premium Bitter/ESB  0.666667  2007      7   \n",
+       "5454544                               Saison  0.622222  2014      3   \n",
+       "5454618                   Belgian Strong Ale  1.000000  2011      4   \n",
+       "5455033                       Sour Red/Brown  0.866667  2014      2   \n",
+       "\n",
+       "                                               new_id_beer  abv  \\\n",
+       "11       ff6db925907bf2b1fb3cc2efacf27a95748bb5eec6807c...  5.5   \n",
+       "732      93a4fdbd983616895a6b07549c3b0994d67a345626b715...  4.8   \n",
+       "981      32786cb3eaa4df524664069f14660c7cb779e862876a48...  3.8   \n",
+       "999      f37156466222335aa4eae4f536dd70f0f50df80ef979d9...  4.6   \n",
+       "1916     88e5683bea6b23c4f6bb42dc495dcbd75dda36b7a18d21...  6.1   \n",
+       "...                                                    ...  ...   \n",
+       "5454172  7e3ae742f42b78dbd6d9a89366911ee620fb7ad37f338c...  5.7   \n",
+       "5454185  eb1f2a5b2802e8c766f91ad40bf6a6cf194c4ae9fc7f41...  5.2   \n",
+       "5454544  331cbf29f21a93327dce692b4b895b1bf481b6db69b3af...  8.0   \n",
+       "5454618  cb42daaa490aa9ba4ce7d70226b869af136b00e32128ba...  8.5   \n",
+       "5455033  712a1825ba05da3376e15cb453ae4501a4d1990276c134...  5.2   \n",
+       "\n",
+       "        brewery_location       dataset  good_review  US_location  abv_bin  \\\n",
+       "11                Canada  BeerAdvocate        False        False   (4, 6]   \n",
+       "732              England  BeerAdvocate         True        False   (4, 6]   \n",
+       "981              England  BeerAdvocate        False        False   (2, 4]   \n",
+       "999              England  BeerAdvocate        False        False   (4, 6]   \n",
+       "1916             Ireland  BeerAdvocate        False        False   (6, 8]   \n",
+       "...                  ...           ...          ...          ...      ...   \n",
+       "5454172          England      RateBeer         True        False   (4, 6]   \n",
+       "5454185          England      RateBeer         True        False   (4, 6]   \n",
+       "5454544          Belgium      RateBeer        False        False   (6, 8]   \n",
+       "5454618          Belgium      RateBeer         True        False  (8, 10]   \n",
+       "5455033          Belgium      RateBeer         True        False   (4, 6]   \n",
+       "\n",
+       "                                                    strata  propensity_score  \\\n",
+       "11                     American IPA_(4, 6]_11_BeerAdvocate          0.800000   \n",
+       "732         American Pale Ale (APA)_(4, 6]_12_BeerAdvocate          0.961538   \n",
+       "981                   English Bitter_(2, 4]_8_BeerAdvocate          0.333333   \n",
+       "999      Extra Special / Strong Bitter (ESB)_(4, 6]_12_...          0.400000   \n",
+       "1916          Saison / Farmhouse Ale_(6, 8]_8_BeerAdvocate          0.863636   \n",
+       "...                                                    ...               ...   \n",
+       "5454172                American Pale Ale_(4, 6]_3_RateBeer          0.885714   \n",
+       "5454185               Premium Bitter/ESB_(4, 6]_7_RateBeer          0.416667   \n",
+       "5454544                           Saison_(6, 8]_3_RateBeer          0.761905   \n",
+       "5454618              Belgian Strong Ale_(8, 10]_4_RateBeer          0.346154   \n",
+       "5455033                   Sour Red/Brown_(4, 6]_2_RateBeer          0.250000   \n",
+       "\n",
+       "        propensity_score_bin  \n",
+       "11                      0.80  \n",
+       "732                     1.00  \n",
+       "981                     0.35  \n",
+       "999                     0.40  \n",
+       "1916                    0.90  \n",
+       "...                      ...  \n",
+       "5454172                 0.90  \n",
+       "5454185                 0.45  \n",
+       "5454544                 0.80  \n",
+       "5454618                 0.35  \n",
+       "5455033                 0.25  \n",
+       "\n",
+       "[8836 rows x 16 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "matching = list(nx.max_weight_matching(G))\n",
     "\n",
@@ -17491,7 +17831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -17499,27 +17839,27 @@
      "output_type": "stream",
      "text": [
       "Optimization terminated successfully.\n",
-      "         Current function value: 0.683094\n",
+      "         Current function value: 0.679725\n",
       "         Iterations 4\n",
       "Model Summary: \n",
       "                            Logit Regression Results                           \n",
       "==============================================================================\n",
-      "Dep. Variable:            good_review   No. Observations:                  426\n",
-      "Model:                          Logit   Df Residuals:                      424\n",
+      "Dep. Variable:            good_review   No. Observations:                 8836\n",
+      "Model:                          Logit   Df Residuals:                     8834\n",
       "Method:                           MLE   Df Model:                            1\n",
-      "Date:                Fri, 22 Dec 2023   Pseudo R-squ.:               0.0001481\n",
-      "Time:                        13:14:24   Log-Likelihood:                -291.00\n",
-      "converged:                       True   LL-Null:                       -291.04\n",
-      "Covariance Type:            nonrobust   LLR p-value:                    0.7690\n",
+      "Date:                Fri, 22 Dec 2023   Pseudo R-squ.:                0.002039\n",
+      "Time:                        13:41:13   Log-Likelihood:                -6006.0\n",
+      "converged:                       True   LL-Null:                       -6018.3\n",
+      "Covariance Type:            nonrobust   LLR p-value:                 7.248e-07\n",
       "===============================================================================\n",
       "                  coef    std err          z      P>|z|      [0.025      0.975]\n",
       "-------------------------------------------------------------------------------\n",
-      "Intercept       0.2549      0.138      1.845      0.065      -0.016       0.526\n",
-      "US_location     0.0575      0.196      0.294      0.769      -0.326       0.441\n",
+      "Intercept       0.2063      0.030      6.818      0.000       0.147       0.266\n",
+      "US_location     0.2136      0.043      4.951      0.000       0.129       0.298\n",
       "=============================================================================== \n",
       "\n",
-      "p-value: 0.769\n",
-      "Reject null hypothesis (alpha = 0.05): False\n"
+      "p-value: 0.000\n",
+      "Reject null hypothesis (alpha = 0.05): True\n"
      ]
     }
    ],
